# EVOSEAL

./: .coveragerc  .dockerignore  .editorconfig  .env.example  .evoseal.env.template  .evoseal.local.example  .flake8  .gitignore  .gitmodules  .hadolint.yaml  .pre-commit-config.yaml  .prettierrc  .safety-policy.json  .secrets.baseline  :memory:  AGENT.md  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  EFFICIENCY_REPORT.md  EVOLUTION.md  GITHUB_PAGES_SETUP_INSTRUCTIONS.md  MAINTAINERS.md  Makefile  NOTICE  Plans.md  README.md  RELEASE_CHECKLIST.md  REORGANIZATION_PLAN.md  ROADMAP.md  SAFETY.md  SCRIPT_CLEANUP_SUMMARY.md  SECURITY.md  SERVICE_SETUP_SUMMARY.md  (+23 more)
.claude/: settings.json
.claude-plugin/: plugin.json
.evoseal/: config.yaml  pipeline_config.json  pipeline_state.json
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  cleanup.yml  codeql-analysis.yml  container-build.yml  docs.yml  pre-release.yml  release.yml  snyk-security.yml
.roo/rules/: dev_workflow.md  taskmaster.md
.semgrep-venv/: pyvenv.cfg
.taskmaster/: state.json
.taskmaster/docs/: PRD.txt
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: tasks.json
benchmarks/: README.md  baseline_results.json  benchmark_evolution.py  comparison_results.md  generate_convergence_plots.py  run_benchmark.py  test_evolution_benchmark.py
benchmarks/plots/: convergence_data.json
checkpoints/checkpoint_test_v1.0/: metadata.json  system_state.pkl
config/: budget.yaml  development.json  learning_datasets.json  logging.yaml  production.json  settings.py  testing.json
docs/: API_REFERENCE.md  CI_CD_WORKFLOW.md  DEPLOYMENT_GUIDE.md  PHASE3_BIDIRECTIONAL_EVOLUTION.md  QUICKSTART.md  SYSTEMD_INTEGRATION.md  UPDATE_SYSTEM.md  agentic_system.md  continuous_operation.md  enhanced_rollback_logic.md  error_handling.md  event_system.md  evolution_pipeline_safety_integration.md  extended_capabilities.md  index.md  knowledge_base.md  prompt_template_system.md  regression_detector_interface.md  rollback_manager_interface.md  safety_validation.md  workflow_orchestration.md
evoseal/: __init__.py  __version__.py  config.py  controller.py  evaluator.py  py.typed  selection.py  testrunner.py  version_database.py
examples/: README.md  checkpoint_restoration_test.py  enhanced_checkpoint_test.py  enhanced_event_system_example.py  error_handling_resilience_example.py  examples  git_interface_example.py  integration_example.py  logging_example.py  minimal_workflow.py  quickstart.py  safety_features_example.py  self_editor_with_knowledge.py  simple_event_demo.py  simple_resilience_test.py  simple_safety_integration_test.py  test_enhanced_rollback_logic.py  test_evolution_pipeline_safety_integration.py  test_regression_detector_interface.py  test_statistical_regression_detection.py  version_control_experiment_tracking.py  version_manager_example.py  workflow_orchestration_example.py
metrics/: evolution_0.2.0_2025_07_22T06_41_44Z.json  evolution_0.2.0_2025_07_22T06_43_06Z.json  evolution_0.2.10_2025_07_23T01_39_09Z.json  evolution_0.2.11_2025_07_23T01_41_34Z.json  evolution_0.2.11_2025_07_23T01_42_56Z.json  evolution_0.2.11_2025_07_23T01_44_18Z.json  evolution_0.2.11_2025_07_23T01_45_40Z.json  evolution_0.2.1_2025_07_22T06_44_28Z.json  evolution_0.2.2_2025_07_22T06_45_56Z.json  evolution_0.2.3_2025_07_22T06_47_25Z.json  evolution_0.2.3_2025_07_22T06_48_47Z.json  evolution_0.2.4_2025_07_22T06_50_15Z.json  evolution_0.2.8_2025_07_23T01_12_32Z.json  evolution_0.2.8_2025_07_23T01_13_54Z.json  evolution_0.2.9_2025_07_23T01_16_18Z.json  evolution_0.2.9_2025_07_23T01_17_40Z.json  evolution_0.2.9_2025_07_23T01_19_02Z.json  evolution_0.2.9_2025_07_23T01_20_24Z.json  evolution_0.2.9_2025_07_23T01_21_45Z.json  evolution_0.2.9_2025_07_23T01_23_07Z.json  evolution_0.2.9_2025_07_23T01_24_29Z.json  evolution_0.2.9_2025_07_23T01_25_51Z.json  evolution_0.2.9_2025_07_23T01_27_12Z.json  evolution_0.2.9_2025_07_23T01_28_34Z.json  evolution_0.2.9_2025_07_23T01_29_56Z.json  evolution_0.2.9_2025_07_23T01_31_17Z.json  evolution_0.2.9_2025_07_23T01_32_39Z.json  evolution_0.2.9_2025_07_23T01_34_01Z.json  evolution_0.2.9_2025_07_23T01_35_23Z.json  evolution_0.2.9_2025_07_23T01_36_44Z.json  evolution_v0.2.0.json  release_notes_0.2.10.md  release_notes_0.2.4.md  release_notes_0.2.8.md
releases/: release_notes_0.2.10.md  release_notes_0.2.11.md  release_notes_0.2.12.md  release_notes_0.2.13.md  release_notes_0.2.2.md  release_notes_0.2.3.md  release_notes_0.2.4.md  release_notes_0.2.5.md  release_notes_0.2.9.md
requirements/: base.txt  constraints.txt  dev.txt  docs.txt  frozen_requirements.txt.bak  pinned_dev_requirements.txt  pinned_requirements.txt  requirements.txt  security.txt  security.txt.bak  updated_dev_requirements.txt  updated_requirements.txt
scripts/: DEPRECATED_run_continuous.sh  _logging.sh  auto_evolve_and_push.sh  auto_generate_release_notes.py  bump_version.py  check_env.py  cleanup_metrics.py  collect_metrics.sh  evolve_project.sh  evoseal  evoseal-config.sh  evoseal-unified-runner.sh  evoseal-update.timer  evoseal.service  evoseal_watchdog.sh  fix_dependencies.sh  generate_evolution_notes.py  generate_release_files.sh  install_evoseal_service.sh  install_service.sh  integrate_external_sources.sh  organize_release_notes.py  prepare_release.sh  provider_cli.py  release.sh  run_continuous.sh  run_continuous.sh.deprecated  run_evolution_cycle.sh  run_phase3_continuous_evolution.py  run_tests.sh  setup.sh  smoke_test_systemd.sh  sync_learning_datasets.sh  test_cli.py  test_evolution_data_collection.py  test_ollama_integration.sh  test_phase2_components.py  test_provider_manager.sh  test_service_autoupdate.sh  update_evoseal.sh  (+3 more)
systemd/: evoseal-watchdog.service  evoseal-watchdog.timer  evoseal.service.template
tasks/: default_task.json
templates/: project_evolution.json
test_project/: README.md
tests/: README.md  conftest.py  test_logging.py  test_workflow_engine.py
(+485 files in other folders)
