[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evoseal"
version = "0.1.0"
description = "EVOSEAL: An advanced AI system integrating DGM, OpenEvolve, and SEAL"
readme = "README.md"
requires-python = ">=3.9"
# SPDX identifier for Apache License 2.0
license = "Apache-2.0"
authors = [
    {name = "Kresna Sucandra"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License 2.0",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "python-dotenv>=0.19.0",
    "PyYAML>=6.0",
    "requests>=2.26.0",
    "GitPython>=3.1.24",
    "structlog>=21.1.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "openai>=0.27.0",
    "anthropic>=0.3.0",
    "tqdm>=4.62.0",
    "python-slugify>=5.0.2",
]

[project.optional-dependencies]
dev = [
    "black>=21.12b0",
    "isort>=5.10.1",
    "flake8>=4.0.1",
    "mypy>=0.931",
    "pre-commit>=2.16.0",
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.18.3",
    "sphinx>=4.3.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-autodoc-typehints>=1.15.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.4.1",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=evoseal --cov-report=term-missing"

[tool.coverage.run]
source = ["evoseal"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
